package com.javaxpert.katas.scala.poker

case class Card(val rank:Rank,val color:Color)
