package com.javaxpert.katas.scala.poker
enum Color extends Selectable {
  case  SPADE,
  HEART,
  DIAMOND,
  TREFLE

}