package com.javaxpert.katas.scala.poker

case class Hand(val cards:List[Card])
