package com.javaxpert.katas.scala.poker

enum HandStrength {
  case CARD_VALUE, 
  PAIR,
   BRELAN,
  FULL,
  DOUBLE_PAIR,
  COLOR,
  QUINTE,
  SQUARRE,
  QUINTE_FLUSH,
  FLUSH_ROYAL
}