package com.javaxpert.katas.scala.poker
enum Rank extends Selectable {
  case ACE,
  TWO,
  THREE,
  FOUR,
  FIVE,
  SIX,
  SEVEN,
  EIGHT,
  NINE,
  TEN,
  JACK,
  QUEEN,
  KING

}